Updated index.html again

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Git Test</title>
 </head>
 <body>
-    <h1>This is a Git test</h1>
+    <h1>This is an Updated Git test</h1>
+    <h3>Something New</h3>
 </body>
 </html>
