--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>This is an Updated Git test</h1>
     <h3>Something New</h3>
+    <h3>Something New 2</h3>
+    <h3>Something New 3</h3>
 </body>
 </html>
